--- a/css/style.css
+++ b/css/style.css
@@ -68,30 +68,14 @@ div.r_surname{
     padding-bottom: 0;
 /*    outline: 1px solid goldenrod;    */
 }
-/*div.regs_links{
-    position: absolute;
-    width: 170px;
-    height: 235px;
-    margin-top: 50px;
-    margin-left: 438px;
-    z-index: 2;
-    outline: 1px solid red;   
-}
-div.r_link{
-    position: relative;
-    width: 170px;
-    height: 28px;
-    padding-top: 1px;
-    padding-bottom: 0;
-    outline: 1px solid greenyellow; 
-}*/
 div.reg_index{
     position: absolute;
     width: 370px;
     height: 75px;
-    margin-top: 270px;
+    margin-top: 254px;
     margin-left: 18px;
     z-index: 2;
+    background-color: #ffffff;
 /*    outline: 1px solid blueviolet;*/
 }
 div.r_index_0{
@@ -99,15 +83,12 @@ div.r_index_0{
     width: 44px;
     height: 72px;
     margin-top: 12px;
+    padding-left: 8px;
+    padding-top: 7px;
     z-index: 0;
-    outline: 1px solid red;
+/*    outline: 1px solid red;*/
 }
-div.r_index_1{
-    position: absolute;
-    width: 44px;
-    height: 72px;
-    z-index: 0;
-}
+
 div.reg_submit{
     position: absolute;
 /*    outline: 1px solid red;*/
